--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-ext</artifactId>
+        <version>1.7.25</version>
+      </dependency>
     </dependencies>
 
     <build>
