--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,7 @@ mybatis:
 
 nginx:
   html:
-    root: ${NGINX_HTML1_ROOT:/Users/gongliangjun/workspace_msb/product/src/main/resources/temp/}
-    roots: ${NGINX_HTML1_ROOT:/Users/gongliangjun/workspace_msb/product/src/main/resources/temp/},${NGINX_HTML2_ROOT:/Users/gongliangjun/workspace_msb/product/src/main/resources/temp2/}
+    roots: ${NGINX_HTML_ROOTS:/Users/gongliangjun/workspace_msb/product/src/main/resources/temp/},${NGINX_HTML2_ROOT:/Users/gongliangjun/workspace_msb/product/src/main/resources/temp2/}
 
 
 
